<resources>
    <!--App-->
        <string name="app_name">TaskManager</string>

    <!--Activity-->
        <!--SignIn Activity-->
            <string name="logged_in_message">Logged in</string>
            <string name="failed_log_in_message">Failed to log in</string>

        <!--Intention Activity-->
            <string name="title_activity_intention">IntentionActivity</string>
            <string name="navigation_drawer_open">Open navigation drawer</string>
            <string name="navigation_drawer_close">Close navigation drawer</string>
            <string name="action_settings">action</string>
            <string name="data_loaded_message">Data loaded</string>
            <string name="network_error">Unexpected network error</string>

    <!--Dialog-->
        <string name="ok_button">OK</string>
        <string name="cancel_button">Cancel</string>

        <!--Events Dialog-->
            <string name="time_error_msg">End time might be bigger than start time</string>
            <string name="failed_to_create_event_msg">Failed to create event</string>
            <string name="failed_to_update_event_msg">Failed to update event</string>
            <string name="events_title">Events</string>

        <!--Tasks Dialog-->
            <string name="tasks_title">Tasks</string>
            <string name="failed_to_create_task_msg">Failed to create task</string>
            <string name="failed_to_update_task_msg">Failed to update task</string>

        <!--TaskLists Dialog-->
            <string name="task_list_rename_title">Rename list</string>
            <string name="task_lists_add_title">Add new list</string>

    <!--Res-->
        <!--layout-->
            <string name="default_textview_title">TextView</string>
            <string name="name_hint">Name</string>
            <string name="description_hint">description</string>

            <!--Navigation header-->
                <string name="nav_header_title">Android Studio</string>
                <string name="nav_header_subtitle">android.studio@android.com</string>
                <string name="nav_header_desc">Navigation header</string>

            <!--Spinner Mode-->
                <string-array name="modes">
                    <item>Day</item>
                    <item>Week</item>
                    <item>Month</item>
                </string-array>

            <!--activity_intention-->
                <string name="add_task_list"> + Add list</string>
                <string name="default_tasklist_error_msg">You can not delete the default list.</string>

            <!--dialog_events-->
                <string name="choose_color">Choose color</string>
                <string name="start_time">Start time</string>
                <string name="end_time">End time</string>
                <string name="event_date">Event date</string>
                <string name="notification_text">Enable notification</string>

            <!--dialog_tasklists-->
                <string name="tasklist_name_hint">Title</string>
                <string name="failed_to_create_tasklist_msg">Failed to create task list</string>
                <string name="failed_to_update_tasklist_msg">Failed to update task list</string>

            <!--dialog_tasks-->
                <string name="set_task_date_title">Set task date</string>

            <!--item_event-->
                <string name="event_name">Event title</string>
                <string name="event_time">Event time</string>
                <string name="event_description">Event description</string>

            <!--fragment_daily_events-->
                <string name="no_events_for_today">No events for today</string>
                <string name="failed_to_load_events_msg">Failed to load events</string>
                <string name="failed_to_delete_event_msg">Failed to delete event</string>

            <!--fragment_week_dashboard-->
                <string name="monday_name">Mon</string>
                <string name="tuesday_name">Tue</string>
                <string name="wednesday_name">Wed</string>
                <string name="thursday_name">Thu</string>
                <string name="friday_name">Fri</string>
                <string name="saturday_name">Sat</string>
                <string name="sunday_name">Sun</string>
                <string name="time">Time</string>
                <string name="late_night_time">04:00</string>
                <string name="morning_time">08:00</string>
                <string name="noon_time">12:00</string>
                <string name="afternoon_time">16:00</string>
                <string name="evening_time">20:00</string>
                <string name="night_time">24:00</string>

            <!--fragment_events_statistic-->
                <string name="choose_watch_mode">Choose watch mode</string>
                <string name="no_events_to_show_message">No events to show</string>

            <!--fragment_tasks-->
                <string name="failed_to_load_tasks_msg">Failed to load tasks</string>
                <string name="failed_to_delete_task_msg">Failed to delete task</string>

            <!--item_task-->
                <string name="task_name">Task title</string>
                <string name="task_description">Task description</string>

        <!--menu-->
            <!--bottom_navigation-->
                <string name="week_title">Week</string>
                <string name="today_title">Today</string>
                <string name="statistic_title">Statistic</string>

            <!--date_picking-->
                <string name="pick_date_title">Pick date</string>

            <!--intention-->
                <string name="update_tasklist_title">Update task list</string>
                <string name="delete_tasklist_title">Delete task list</string>
                <string name="failed_to_load_tasklists_msg">Failed to load task lists</string>
                <string name="failed_to_delete_tasklist_msg">Failed to delete task list</string>

</resources>
