<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout_tasks"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_text_task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edit_text_task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/description_hint"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/text_task_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/set_task_date_title"
        android:textAlignment="center"
        android:textSize="18sp" />

</LinearLayout>
