<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="4dp"
    android:layout_marginBottom="5dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <LinearLayout
            android:id="@+id/linear_layout_event_item"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linear_layout_events_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/_9"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_event_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    tools:text="@string/event_name"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_event_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:layout_below="@id/text_event_name"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    tools:text="@string/event_time"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/text_event_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:layout_below="@id/text_event_time"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    tools:text="@string/event_description"
                    android:textSize="15sp" />

            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewDeleteEvent"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_delete_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/linear_layout_event_item"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>